added button style

--- a/public/style.css
+++ b/public/style.css
@@ -25,3 +25,30 @@
 .blocklyToolboxCategory:nth-child(7) .blocklyTreeIcon {
     background-image: url("icons/custom.png")
 }
+
+
+/* https://markodenic.com/tools/buttons-generator/ */
+.button {
+    min-width: 130px;
+    height: 40px;
+    color: #fff;
+    padding: 5px 10px;
+    font-family: "Fredoka", sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    position: relative;
+    display: inline-block;
+    outline: none;
+    border-radius: 5px;
+    border: none;
+    box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5), 7px 7px 20px 0px rgba(0,0,0,.1), 4px 4px 5px 0px rgba(0,0,0,.1);
+    background: #4433ff;
+  }
+.button:hover {
+    background-color: #3a86ff;
+}
+.button:active {
+    top: 2px;
+}
