--- a/src/App.css
+++ b/src/App.css
@@ -114,3 +114,12 @@ html {
   margin: 20px !important;
   margin-top: 5px !important;
 }
+
+.filter-container {
+  max-width: 800px !important;
+}
+
+.reset-btn {
+  width: 100px;
+  display: block;
+}
